--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,7 @@
           </fieldset>
 
           <fieldset class="form__block">
-            <legend class="form__legend">Объемб в ГБ</legend>
+            <legend class="form__legend">Объем в ГБ</legend>
             <ul class="check-list">
               <li class="check-list__item">
                 <label class="check-list__label">
@@ -192,6 +192,7 @@
       </aside>
 
       <section class="catalog">
+        <div id="app"></div>
         <ul class="catalog__list">
           <li class="catalog__item">
             <a class="catalog__pic" href="#">
