--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link href="css/loader.css" rel="stylesheet" />
     <link href="css/style.min.css" rel="stylesheet" />
     <title>Каталог</title>
   </head>
